35L_5/lab5.txt
Lab 5 Log
Manas Kumar 004580689


Used wget http://web.cs.ucla.edu/classes/fall16/cs35L/assign/coreutils.diff
to download coreutils-with-bug.tar.gz into assignment folder.

Used tar -zxvf coreutils-with-bug.tar.gz command to unzip folder, 
created coreutils-with-bug directory.

Inside created directory, used ./configure and make commands to attempt to build.

Using make command produced the following error message:

In file included from utimecmp.c:41:0:
utimens.h:2:5: error: conflicting types for 'futimens'
int futimens (int, char const *, struct timespec const [2]);
      ^
In file included from utimecmp.h:25:0,
from utimecmp.c:25:
/usr/include/sys/stat.h:374:12: note: previous declaration of 'futimens' was here
extern int futimens (int __fd, __const struct timespec __times[2]) __THROW;
           ^

To fix this, used wget http://web.cs.ucla.edu/classes/fall16/cs35L/assign/coreutils.diff
to download coreutils.diff patch from assignment page.

Used patch -p0 < ../coreutils.diff command inside coreutils-with-bug directory
to apply the downloaded patch.

Tried ./configure and make commands again.
This time, no error messages were shown.

Ran the following commands to create a temporary directory and fill it with
three files with different last-modified dates:
$ tmp=$(mktemp -d)
$ cd $tmp
$ touch -d '1918-11-11 11:00 GMT' wwi-armistice
$ touch now
$ sleep 1
$ touch now1
$ ~/35L_5_1/coreutils-with-bug/src/ls -lt --full-time wwi-armistice now now1

The last command produced the following output:
-rw-r--r-- 1 kumar csugrad 0 1918-11-11 03:00:00.000000000 -0800 wwi-armistice
-rw-r--r-- 1 kumar csugrad 0 2016-10-30 11:43:04.465753176 -0700 now1
-rw-r--r-- 1 kumar csugrad 0 2016-10-30 11:42:57.443640178 -0700 now

This output is buggy, because wwi-armistice should be third in the list and say
-rw-r--r-- 1 kumar csugrad 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice

Right off the bat it seemed like the problem was due to overflow.

Used gdb ~/35L_5_1/coreutils-with-bug/src/ls command to find bug.
Used gdb i functions to get a list of functions across all the c files.
Found a function called sort_files that seemed to be relevent to bug.

Used emacs to find where that function is in ls.c and went back to gdb and
put a breakpoint there, and ran ls with (gdb) r -lt.

Found that sort_files uses another function compare_mtime to compare its parameters,
so I put a breakpoint at compare_mtime and used (gdb) r -lt once more.

By stepping into compare_mtime, found a function timespec_cmp in timespec.h that
returns the difference between how old two files are in seconds. The way timespec_cmp
does this (subtraction instead of comparing) has the possibility of messing up due to 
overflow.

In emacs, replaced function text with 3 if statements that do no subtraction and rely
on comparison instead. 

Returned to coreutils-with-bug directory and used make command again.
Then went back to temp file and tried ls -lt again. This time the output was:
-rw-r--r-- 1 kumar csugrad 0 2016-10-30 11:43:04.465753176 -0700 now1
-rw-r--r-- 1 kumar csugrad 0 2016-10-30 11:42:57.443640178 -0700 now
-rw-r--r-- 1 kumar csugrad 0 1918-11-11 03:00:00.000000000 -0800 wwi-armistice

It worked! 
Renamed directory to coreutils-with-bug1, extracted coreutils-with-bug.tar.gz 
once more and inside the newly created coreutils-with-bug directory, applied the 
patch and used ./configure and make commands again.

Used command diff -u coreutils-with-bug coreutils-with-bug1 > lab5.diff to create
lab5.diff file. Used C-x 4 a to make a changelog entry to file, and pasted it into
diff file.

Finally, when recreating the bug in the home directory instead of in $tmp, 
wwi-armistice is shown to be from the year 2054. This is because linux handles
dates by how far they are from the Unix Epoch 1970. 2054 comes from adding the 
difference between 1918 and 1970 to 1970 with a 64-bit extension. The file still
shows up at the top of the list.

xkcd.com/376/
